--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,16 @@ apply plugin: 'java'
 sourceCompatibility = 1.5
 version = '1.0'
 
+def repositoryPath = 'C:\\JavaRepo'
+
 repositories {
     mavenCentral()
+
+    flatDir {
+        dirs repositoryPath
+    }
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile files('bukkit/bukkit-1.7.9-R0.jar')
 }
