--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 def projectName = 'ArborianQuests'
 def majorVersion = '0'
-def vcsRootId = 'GIT_BukkitArborianQuests'
 
 defaultTasks 'build'
 
@@ -13,7 +12,7 @@ targetCompatibility = 1.7
 
 // Set version number
 if (hasProperty("teamcity")) {
-    version = majorVersion + '.' + teamcity["build.number"] + '.git-' + System.properties["build.vcs.number." + vcsRootId]
+    version = majorVersion + '.' + teamcity["build.number"] + '.git-' + System.properties["build.vcs.number"]
 }else {
     version = majorVerion + '.000.git-unknown'
 }
