Edit gradle script

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,39 @@
 def projectName = 'ArborianQuests'
 def majorVersion = '0'
+def buildBy = null
+def providedDepends = [
+        'C:/JavaRepo/bukkit/bukkit-1.7.9-R0.jar',
+        'GenericsLib.jar'
+]
+
+def compileDepends = null
+def includeFiles = [
+        'plugin.yml'
+]
+
+// Set version number
+if (hasProperty("teamcity")) {
+    version = majorVersion + '.' + teamcity["build.number"] + '.git-' + teamcity["build.vcs.number"]
+
+    if (buildBy == null) {
+        buildBy = teamcity["build.triggeredBy.username"]
+
+        if (!buildBy) {
+            buildBy = teamcity["build.triggeredBy"]
+        }
+
+        if (!buildBy) {
+            buildBy = teamcity["agent.name"]
+        }
+    }
+
+}else {
+    version = majorVerion + '.000.git-unknown'
+}
+
+if (buildBy == null) {
+    buildBy = System.properties['user.name']
+}
 
 defaultTasks 'build'
 
@@ -8,14 +42,6 @@ apply plugin: 'java'
 // Minimum Java Version
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
-
-
-// Set version number
-if (hasProperty("teamcity")) {
-    version = majorVersion + '.' + teamcity["build.number"] + '.git-' + teamcity["build.vcs.number"]
-}else {
-    version = majorVerion + '.000.git-unknown'
-}
 
 repositories {
     mavenCentral()
@@ -46,8 +72,14 @@ sourceSets {
 
 // Add dependencies
 dependencies {
-    provided files('C:/JavaRepo/bukkit/bukkit-1.7.9-R0.jar',
-                   'GenericsLib.jar')
+
+    if (compileDepends) {
+        compile files(compileDepends)
+    }
+
+    if (providedDepends) {
+        provided files(providedDepends)
+    }
 }
 
 
@@ -58,11 +90,15 @@ jar {
 
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 
+    if (includeFiles) {
+        from includeFiles
+    }
+
     manifest {
-        attributes("Built-By": "JCThePants", //System.properties['user.name']
-                   "Created-By": System.properties['java.vm.version'] + " (" + System.properties['java.vm.vendor'] + ")",
-                   "Implementation-Title": projectName,
-                   "Implementation-Version": version)
+        attributes("Built-By": buildBy,
+                "Created-By": System.properties['java.vm.version'] + " (" + System.properties['java.vm.vendor'] + ")",
+                "Implementation-Title": projectName,
+                "Implementation-Version": version)
     }
 
 }
@@ -74,11 +110,15 @@ task simpleNamedJar(type: Jar) {
 
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 
+    if (includeFiles) {
+        from includeFiles
+    }
+
     manifest {
-        attributes("Built-By": "JCThePants", //System.properties['user.name']
-                   "Created-By": System.properties['java.vm.version'] + " (" + System.properties['java.vm.vendor'] + ")",
-                   "Implementation-Title": projectName,
-                   "Implementation-Version": version)
+        attributes("Built-By": buildBy,
+                "Created-By": System.properties['java.vm.version'] + " (" + System.properties['java.vm.vendor'] + ")",
+                "Implementation-Title": projectName,
+                "Implementation-Version": version)
     }
 
     with jar
